Modify horse entities stable model #659